# CalamariJoins

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  ]  diff  flake.nix
.github/: ci.yml
.github/workflows/: benchmark.yml  ci.yml  deploy-pages.yml  notifier.yaml  release.yaml
docs/: Doxyfile  architecture.md  ayu-theme.css
include/: attribute.h  bloom_tags.h  columnar_reader.h  columnar_structs.h  common.h  construct_intermediate.h  csv_parser.h  cuckoo.h  hardware.h  hardware_benchmarkvm.h  hardware_darwin.h  hash_join.h  hashtable.h  hashtable_structs.h  hopscotch.h  hopscotch_structs.h  hopscotch_table.h  inner_column.h  intermediate.h  join_setup.h  match_collector.h  materialize.h  nested_loop.h  plan.h  robinhood.h  statement.h  table.h  table_entity.h  value_t_builders.h  worker_pool.h
include/data_access/: columnar_reader.h  csv_parser.h  table.h
include/data_model/: deferred_intermediate.h  deferred_plan.h  inner_column.h  intermediate.h  plan.h  statement.h  table_entity.h
include/foundation/: attribute.h  bloom_tags.h  common.h
include/join_execution/: bloom_tags.h  hash_join.h  hashtable.h  join_setup.h  match_collector.h  nested_loop.h  simd_compare.h
include/materialization/: construct_deferred.h  construct_intermediate.h  materialize.h  materialize_deferred.h  page_builders.h
include/platform/: arena.h  arena_vector.h  hardware.h  hardware_benchmarkvm.h  hardware_darwin.h  worker_pool.h
report/: report.typ  report_part1.typ  report_part2.typ  report_part3.typ
scripts/: benchmark.py  benchmark_and_upload.sh  plot_results.py
site/: index.html  results.json
src/: analyze_plan.cpp  build_columnar.cpp  build_table.cpp  csv_parser.cpp  execute.cpp  execute_cuckoo.cpp  execute_hopscotch.cpp  execute_opt.cpp  execute_robinhood.cpp  statement.cpp  value_t_builders.cpp
tests/: build_database.cpp  cuckoo_tests.cpp  hopscotch_tests.cpp  read_sql.cpp  robinhood_tests.cpp  unit_tests.cpp
